; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_network.c_network_send.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_network.c_network_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32)* @network_send to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @network_send(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = call i32 @pq_begintypsend(i32* %5)
  %10 = load i32*, i32** %3, align 8
  %11 = call signext i8 @ip_family(i32* %10)
  %12 = call i32 @pq_sendbyte(i32* %5, i8 signext %11)
  %13 = load i32*, i32** %3, align 8
  %14 = call signext i8 @ip_bits(i32* %13)
  %15 = call i32 @pq_sendbyte(i32* %5, i8 signext %14)
  %16 = load i32, i32* %4, align 4
  %17 = trunc i32 %16 to i8
  %18 = call i32 @pq_sendbyte(i32* %5, i8 signext %17)
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @ip_addrsize(i32* %19)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %2
  store i32 0, i32* %7, align 4
  br label %24

24:                                               ; preds = %23, %2
  %25 = load i32, i32* %7, align 4
  %26 = trunc i32 %25 to i8
  %27 = call i32 @pq_sendbyte(i32* %5, i8 signext %26)
  %28 = load i32*, i32** %3, align 8
  %29 = call i64 @ip_addr(i32* %28)
  %30 = inttoptr i64 %29 to i8*
  store i8* %30, i8** %6, align 8
  store i32 0, i32* %8, align 4
  br label %31

31:                                               ; preds = %42, %24
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* %7, align 4
  %34 = icmp slt i32 %32, %33
  br i1 %34, label %35, label %45

35:                                               ; preds = %31
  %36 = load i8*, i8** %6, align 8
  %37 = load i32, i32* %8, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i8, i8* %36, i64 %38
  %40 = load i8, i8* %39, align 1
  %41 = call i32 @pq_sendbyte(i32* %5, i8 signext %40)
  br label %42

42:                                               ; preds = %35
  %43 = load i32, i32* %8, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %8, align 4
  br label %31

45:                                               ; preds = %31
  %46 = call i32* @pq_endtypsend(i32* %5)
  ret i32* %46
}

declare dso_local i32 @pq_begintypsend(i32*) #1

declare dso_local i32 @pq_sendbyte(i32*, i8 signext) #1

declare dso_local signext i8 @ip_family(i32*) #1

declare dso_local signext i8 @ip_bits(i32*) #1

declare dso_local i32 @ip_addrsize(i32*) #1

declare dso_local i64 @ip_addr(i32*) #1

declare dso_local i32* @pq_endtypsend(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
